@@ -44,6 +44,9 @@ server:
 	# more slabs reduce lock contention, but fracture memory usage.
 	# msg-cache-slabs: 4
 
+	# the number of queries that a thread gets to service.
+	# num-queries-per-thread: 1024
+
 	# Enable IPv4, "yes" or "no".
 	# do-ip4: yes
 
