@@ -72,7 +72,7 @@ extern struct config_parser_state* cfg_parser;
 %token VAR_DO_IP4 VAR_DO_IP6 VAR_DO_UDP VAR_DO_TCP
 %token VAR_FORWARD_TO VAR_FORWARD_TO_PORT VAR_CHROOT
 %token VAR_USERNAME VAR_DIRECTORY VAR_LOGFILE VAR_PIDFILE
-%token VAR_MSG_CACHE_SIZE VAR_MSG_CACHE_SLABS
+%token VAR_MSG_CACHE_SIZE VAR_MSG_CACHE_SLABS VAR_NUM_QUERIES_PER_THREAD
 
 %%
 toplevelvars: /* empty */ | toplevelvars toplevelvar ;
@@ -93,7 +93,8 @@ content_server: server_num_threads | server_verbosity | server_port |
 	server_do_ip6 | server_do_udp | server_do_tcp | server_forward_to |
 	server_forward_to_port | server_interface | server_chroot | 
 	server_username | server_directory | server_logfile | server_pidfile |
-	server_msg_cache_size | server_msg_cache_slabs;
+	server_msg_cache_size | server_msg_cache_slabs |
+	server_num_queries_per_thread;
 server_num_threads: VAR_NUM_THREADS STRING 
 	{ 
 		OUTYY(("P(server_num_threads:%s)\n", $2)); 
@@ -258,6 +259,15 @@ server_msg_cache_slabs: VAR_MSG_CACHE_SLABS STRING
 			if(!is_pow2(cfg_parser->cfg->msg_cache_slabs))
 				yyerror("must be a power of 2");
 		}
+		free($2);
+	}
+	;
+server_num_queries_per_thread: VAR_NUM_QUERIES_PER_THREAD STRING
+	{
+		OUTYY(("P(server_num_queries_per_thread:%s)\n", $2));
+		if(atoi($2) == 0)
+			yyerror("number expected");
+		else cfg_parser->cfg->num_queries_per_thread = atoi($2);
 		free($2);
 	}
 	;
